<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LoginUser">

    <!-- Bienvenida de usuario -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Saludo personalizado -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo_back"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <!-- Campo de correo electrónico -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAccessibility="yes"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/signin"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_btn"
        android:padding="12dp" />

    <!-- Espaciado -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_google"
        android:drawableEnd="@drawable/google"
        android:drawablePadding="12dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp"
        android:text="@string/google"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <!-- Enlace para registrarse -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center">

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp" />
    </LinearLayout>

</LinearLayout>
